# extract-duckdb-table-action

./: Dockerfile  README.md  act_README.md  action.yml  extract-duckdb.yml  pyproject.toml
.github/workflows/: test.yaml
src/: main.py
tests/: test_git_history_mode.py
